packages/parser/tests/fixtures/grammar/negative/unclosed-process.asfl
module SYSTEM_Bad;
process P ()
FSF :
others && true
end_module
